--- a/src/sass/common/_slider.scss
+++ b/src/sass/common/_slider.scss
@@ -111,6 +111,9 @@
       height: 400px;
       padding-right: 0;
     }
+    @media (max-width: 991px) {
+      display: none;
+    }
     span {
       color: var(--heading-color);
       width: 126px;
@@ -310,6 +313,12 @@
   }
   @media (max-width: 991px) {
     width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    overflow: hidden;
+  }
+  @media (max-width: 575px) {
+    padding-left: 12px;
     padding-right: 12px;
   }
 }
