--- a/src/sass/shortcode/_card.scss
+++ b/src/sass/shortcode/_card.scss
@@ -74,6 +74,13 @@
     position: relative;
     @media (max-width: 991px) {
       padding: 30px 20px;
+      height: 380px;
+      min-height: 320px;
+    }
+    @media (max-width: 575px) {
+      height: 340px;
+      min-height: 300px;
+      padding: 24px 16px;
     }
     .cs_card_title,
     .cs_card_subtitle {
@@ -351,6 +358,7 @@
 }
 .cs_card.cs_style_4 {
   width: 1063px;
+  max-width: 100%;
   @media (max-width: 1400px) {
     width: 900px;
   }
@@ -361,10 +369,13 @@
     width: 500px;
   }
   @media (max-width: 767px) {
-    width: 400px;
+    width: 340px;
   }
   @media (max-width: 575px) {
-    width: calc(100vw - 24px);
+    width: 300px;
+  }
+  @media (max-width: 380px) {
+    width: 280px;
   }
   .cs_card_thumb {
     height: 480px;
@@ -373,7 +384,11 @@
       height: 400px;
     }
     @media (max-width: 991px) {
+      height: 320px;
       margin-bottom: 20px;
+    }
+    @media (max-width: 575px) {
+      height: 280px;
     }
   }
   .cs_card_info_list {
@@ -453,11 +468,21 @@
     }
 
     &.cs_card_thumb_zoom {
+      display: block;
+      height: 380px;
       min-height: 380px;
+      @media (max-width: 767px) {
+        height: 300px;
+        min-height: 300px;
+      }
+      @media (max-width: 575px) {
+        height: 260px;
+        min-height: 260px;
+      }
       img {
         width: 100%;
         height: 100%;
-        min-height: 380px;
+        display: block;
         object-fit: cover;
         object-position: center 15%;
         transform: scale(1.35);
