--- a/src/sass/default/_typography.scss
+++ b/src/sass/default/_typography.scss
@@ -1,6 +1,12 @@
 /*--------------------------------------------------------------
 1. Typography
 ----------------------------------------------------------------*/
+html {
+  overflow-x: hidden;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  scroll-behavior: smooth;
+}
 body,
 html {
   color: var(--body-color);
@@ -9,11 +15,11 @@ html {
   font-size: 16px;
   line-height: 1.5em;
   font-weight: 400;
-  overflow-x: hidden;
-  -webkit-overflow-scrolling: touch;
 }
 body {
-  overscroll-behavior: none;
+  overflow-x: hidden;
+  overflow-y: auto;
+  min-height: 100%;
   position: relative;
   width: 100%;
 }
